# win-mktemp

./: Cargo.toml  LICENSE
src/: lib.rs  mktemp.rs  service.rs  win_mktemp.rs
src/cli/: mktemp_api.rs  mod.rs
src/service_configuration/: mod.rs  parse_config.rs  records.rs  service.rs
test/config/: config.ini
test/records/: records.json  records_saves.json
