[package]
name = "mktemp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "^3.0.2"
"serial_test" = "^2.0.0"
rand = "^0.8.5"
clap = { version = "4.3.5", features = ["derive"] }

[[bin]]
name = "mktemp"
path = "src/mktemp.rs"