[package]
name = "win_mktemp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "^3.0.2"
"serial_test" = "^2.0.0"
rand = "^0.8.5"
clap = { version = "4.3.5", features = ["derive"] }
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.99"
chrono = "0.4.26"
ctrlc = "3.4.0"

[[bin]]
name = "mktemp"
path = "src/win_mktemp.rs"
[[bin]]
name = "mktemp-service"
path = "src/service.rs"
